<resources>
    <string name="app_name">Homework</string>
    <string name="title">Weather in your location</string>
    <string name="your_location">your location</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="clear">Clear</string>
    <string name="overcast">Overcast</string>
    <string name="cloudy">Cloudy</string>
    <string name="snow">Snowy</string>
    <string name="light_rain">Light rain</string>
    <string name="rain">Rainy</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="enter_city">Enter city:</string>
    <string name="degree">" ℃"</string>
    <string name="percent">" \%"</string>
    <string name="velocity">" m/s"</string>
    <string name="mmHg">" mm Hg"</string>
    <string name="choose_weather_options">Choose weather options:</string>
    <string name="choose_duration">Choose duration:</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="submit">Submit</string>
    <string name="title_in">"Weather in %s"</string>
    <string name="date">"Date"</string>
    <string name="temperature">"Temperature"</string>
    <string name="precipitations">"Precipitations"</string>
    <string name="humidity">"Humidity"</string>
    <string name="pressure">"Pressure"</string>
    <string name="wind_speed">"Wind speed"</string>
</resources>
